tests/baselines/reference/errorWithSameNameType.errors.txt
tests/cases/compiler/c.ts(7,5): error TS2367: This condition will always return 'false' since the types 'import("tests/cases/compiler/a").F' and 'import("tests/cases/compiler/b").F' have no overlap.
tests/cases/compiler/c.ts(11,1): error TS2322: Type 'import("tests/cases/compiler/b").F' is not assignable to type 'import("tests/cases/compiler/a").F'.
  Property 'foo1' is missing in type 'F'.


==== tests/cases/compiler/a.ts (0 errors) ====
    export interface F {
        foo1: number
    }
    
==== tests/cases/compiler/b.ts (0 errors) ====
    export interface F {
        foo2: number
    }
    
==== tests/cases/compiler/c.ts (2 errors) ====
    import * as A from './a'
    import * as B from './b'
    
    let a: A.F
    let b: B.F
    
    if (a === b) {
        ~~~~~~~
!!! error TS2367: This condition will always return 'false' since the types 'import("tests/cases/compiler/a").F' and 'import("tests/cases/compiler/b").F' have no overlap.
    
    }
    
    a = b
    ~
!!! error TS2322: Type 'import("tests/cases/compiler/b").F' is not assignable to type 'import("tests/cases/compiler/a").F'.
!!! error TS2322:   Property 'foo1' is missing in type 'F'.
    